@media only screen and(max-width:768px){ /* For mobile phones*/ [class*=col-"]{     width:100%; }
Using media query to make site responsive

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
-
+/* For desktop*/
 * {
     margin: 0;
     padding: 0;
@@ -344,4 +344,5 @@ div.footer h6 {
     color: #88949B;
     font-size: 1rem;
     padding-top: 6rem;
+
 }
